
                          Coccinella CHANGES
                          ------------------


Not to mention all bugfixes and rewrites.

Coccinella-0.96.6 (20080312)

 o all universal builds on macosx
 o HTTP transport more reliable and optimized
 o compatible with Tcl/Tk 8.5

Coccinella-0.96.4.1 (20080108)

 o disco info results are cached

Coccinella-0.96.4 (20071214)

 o enabled stream image file transfer in whiteboard SVG mode
 o colored nicknames with user selected color schemes
 o drag-and-drop roster items inside roster
 o drag-and-drop files to roster items
 o drag-and-drop roster items to desktop or other applications as text/plain
 o xml console
 o spell checking
 o secure (sasl) indicator
 o major rework of subscription dialogs
 o improved component/plugin control
 o si-pub support, used by whiteboard svg mode
 o improved responsiveness during file transfer

Coccinella-0.96.2 (20070919)

 o added support for XEP-0172: User Nickname
 o added autoaway which detects any system inactivity like mouse and keyboard
 o added user activity XEP-0108: User Activity
 o added support for XEP-0106: JID Escaping
 o vCards can be exported to xml files
 o major revision of user experience
 o easier way to manage background images
 o major restructure of menus
 o better consistency among themes (skins)

Coccinella-0.96.0 (20070525)

 o removed the p2p whiteboard mode
 o the whiteboard code can now optionally be removed from the application
 o added settings on unix for default web browser and email client
 o automatically gets a list with free jabber servers when registering new account
 o updated pep/mood code to version 1.0 of the PEP protocol
 o support for geolocation
 o much faster roster population code
 o added roster search method
 o added md5 hash checks for file transfer (bytestreams)
 o added proxy support for bytestreams
 o added support for XEP-0050: Ad-Hoc Commands 

Coccinella-0.95.16 (20070214):

 o new dynamic status menus
 o new basic dialogs on unix