@@ -22,7 +22,7 @@
 # We use the source string as the message.
 # Defined in global namespace and may therefore be used in any namespace.
 # 
-#   $Id: en.msg,v 1.239 2008-03-16 14:28:54 matben Exp $
+#   $Id: en.msg,v 1.240 2008-03-25 08:52:31 matben Exp $
 
 ::msgcat::mcset en Abort
 ::msgcat::mcset en Action
@@ -725,9 +725,11 @@
 ::msgcat::mcset en messsuassclose        {Are you sure you want to close the setup assistant? You may start it any time later from the menu.}
 ::msgcat::mcset en messsuassfillin       {Be sure to fill in all entries before you continue.}
 ::msgcat::mcset en messtimeout           {Timeout when waiting for connection to open.}
+::msgcat::mcset en messunsavedmsgQ       {Do you want to save edits in a file?}
+::msgcat::mcset en messunsaveddtl        {Edits will be lost unless you save them.}
 
 # Messages for tk_messageBox:
-::msgcat::mcset en jamessaddforeign2    {To add a contact from a chat system without open federation, you need an account on this closed system, plus you need to register this account with the corresponding transport (%s). Do you want to do this now?}
+::msgcat::mcset en jamessaddforeign2     {To add a contact from a chat system without open federation, you need an account on this closed system, plus you need to register this account with the corresponding transport (%s). Do you want to do this now?}
 ::msgcat::mcset en jamessaddrmiss        {You need to fill in at least one valid address.}
 ::msgcat::mcset en jamessallowsub2       {%s allows you to see his/her presence.}
 ::msgcat::mcset en jamessalreadyinrost2  {%s is already in your list. Do you want to continue anyway?}
